# rme-noct

./: .gitignore  AGENTS.md  CODEX-REINFORCEMENT.md  Cargo.toml  GAP_ANALYSIS.md  LICENSE  PLAN.md  README.md  SPEC.md  T06-SUMMARY.md  commit_msg.txt  fix_clippy.py  fix_clippy2.py  fix_clippy3.py  fix_lint.py  fix_test.py  package.json  patch_all.py  patch_cargo.py  patch_rust.py  pyproject.toml  update_cargo_toml.py
.agent/workflows/: build.md  test.md
.codex-plugin/: plugin.json
.github/workflows/: README.md  ci.yml  jules-ci-fix.yml  jules-dispatch.yml  jules-invoke.yml  jules-maintenance.yml  jules-schedule.yml  jules-system.yml  jules-test.yml  jules-uiux.yml
.gsd/: DECISIONS.md  M022-PLAN.md  M022-SUMMARY.md  M023-PLAN.md  M023-SUMMARY.md  PROJECT.md  REQUIREMENTS.md  STATE.md  preferences.md  task-registry.json  task-registry.schema.json
.jules/agents/: jules.md
.jules/newagents/: bridge.md  ci.md  maintenance.md  python.md  review.md  rust.md  system.md  test.md  uiux.md  utility.md
.stitch/: DESIGN.md
.tmp-tests/canvas-apply-91908000f26041548bfa403d801e306f/: canvas-apply.ini
.tmp-tests/canvas-apply-b3b80f7b44c74c5fb85d861506ab1384/: canvas-apply.ini
.tmp-tests/canvas-seam-4082c73595ae4e3cbc468facea5b986b/: canvas.ini
.tmp-tests/canvas-seam-587449a9729d4168a67d82ac5e3c97e4/: canvas.ini
.tmp-tests/canvas-select-55b1c760ed6e49b597d66b1dd81234bc/: canvas-select.ini
.tmp-tests/canvas-select-a5e32a74c2854ae892fad80567bc9425/: canvas-select.ini
.tmp-tests/canvas-targeted-apply-3620c26a28764844a76451be2bc73463/: canvas-targeted-apply.ini
.tmp-tests/canvas-targeted-apply-a0b77616f66d4c2991d3525e6c173f68/: canvas-targeted-apply.ini
crates/rme_core/: Cargo.toml  build.rs
crates/rme_core/benches/: io_bench.rs
crates/rme_core/src/: autoborder.rs  brushes.rs  command_stack.rs  editor.rs  item.rs  lib.rs  map.rs  merger.rs  minimap.rs  rendering.rs
crates/rme_core/src/io/: binary_tree.rs  dat.rs  items.rs  mod.rs  otb.rs  otbm.rs  spr.rs  xml.rs
crates/rme_core/src/render/: mod.rs  sprite.wgsl  sprite_atlas.rs  sprite_shader.rs  wgpu_sprite_renderer.rs
pyrme/: __init__.py  __main__.py  app.py  core_bridge.py
pyrme/devtools/: __init__.py
pyrme/editor/: __init__.py  brushes.py  command_history.py  model.py
pyrme/rendering/: __init__.py  client_asset_discovery.py  dat_item_metadata.py  diagnostic_primitives.py  frame_plan.py  frame_sprite_resources.py  spr_compressed_payload.py  spr_frame_metadata.py  sprite_asset_provider.py  sprite_catalog_adapter.py  sprite_draw_commands.py  sprite_frame.py  sprite_resolver.py  sprite_resource_diagnostics.py
pyrme/tools/: __init__.py  ai_assistant.py
pyrme/ui/: AGENTS.md  __init__.py  canvas_frame.py  canvas_host.py  editor_context.py  legacy_menu_contract.py  main_window.py  theme.py  viewport.py
scripts/: patch-gsd-pi.mjs  run-gsd-auto.mjs  run-gsd.mjs  run-python.mjs  setup-devtools.sh
skills/caveman-review/: SKILL.md
tests/python/: conftest.py  test_ai_assistant_gsd_timeout.py  test_app.py  test_brush_catalog_ui_bridge.py  test_brush_palette_perf.py  test_canvas_frame_model.py  test_canvas_seam_m4.py  test_canvas_sprite_draw_diagnostics.py  test_client_asset_discovery.py  test_codex_agents.py  test_codex_stack_report.py  test_core_bridge.py  test_dat_item_metadata.py  test_diagnostic_overlay.py  test_diagnostic_tile_primitives.py  test_editor_activation_backend.py  test_editor_menu_contract_xml.py  test_editor_model.py  test_find_brush_tier2.py  test_find_item_tier2.py  test_focus_tokens.py  test_frame_payload.py  test_frame_sprite_resources.py  test_goto_position_dialog.py  test_gsd_config.py  test_gsd_headless_milestone_bootstrap.py  test_gsd_project_contract.py  test_gsd_runtime_env.py  test_gsd_task_registry.py  test_house_manager_dialog.py  test_item_palette_dock.py  test_item_palette_integration.py  test_item_palette_model.py  (+52 more)
(+350 files in other folders)
