[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyrme"
version = "0.1.0"
description = "PyRME – Python + Rust Remere's Map Editor (Extended Edition)"
readme = "README.md"
license = { text = "GPL-2.0-or-later" }
requires-python = ">=3.12"
authors = [
    { name = "Marcelo Henrique", email = "marcelol090@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics :: Editors",
]
dependencies = [
    "PyQt6>=6.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-qt>=4.4",
    "PyYAML>=6.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "black>=24.0",
]

[project.scripts]
pyrme = "pyrme.__main__:main"

[tool.maturin]
manifest-path = "crates/rme_core/Cargo.toml"
module-name = "pyrme.rme_core"
python-source = "."
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests/python"]
addopts = "-v --tb=short"
qt_api = "pyqt6"
