[package]
name = "rme_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "High-performance Rust core for PyRME – Remere's Map Editor"

[lib]
name = "rme_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
fnv = "1.0"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9.10"

[dependencies.pyo3]
version = "0.23"
optional = true

[dev-dependencies]
criterion = "0.8.2"
tempfile = "3.8"
pyo3 = { version = "0.23", features = ["auto-initialize"] }

[features]
default = ["pyo3"]
extension-module = ["pyo3/extension-module"]

[[bench]]
name = "io_bench"
harness = false
