[package]
name = "rme_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "High-performance Rust core for PyRME – Remere's Map Editor"

[lib]
name = "rme_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23" }
fnv = "1.0"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.39"

wgpu = "29.0.1"
naga = { version = "29.0.1", features = ["wgsl-in"] }
pollster = "0.4"

[dev-dependencies]
criterion = "0.8.2"
pyo3 = { version = "0.23", features = ["auto-initialize"] }
tempfile = "3.8"

[features]
default = []

[[bench]]
name = "io_bench"
harness = false
